--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "npx astro-i18next generate && astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.7.3"
+    "astro": "^2.7.3",
+    "astro-i18next": "^1.0.0-beta.21"
   }
 }
