--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "astro": "^2.8.0",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "astro-i18next": "^1.0.0-beta.21"
   }
 }
