--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/ts-plugin": "^1.0.10",
     "astro": "^2.8.0",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-i18next": "^1.0.0-beta.21"
