--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.1.1",
     "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/ts-plugin": "^1.0.10",
-    "astro": "^2.10.15",
+    "astro": "^4.5.16",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-i18next": "^1.0.0-beta.21"
   }
